Improve loading time

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
 <script src="~/lib/jquery-3.4.1.min.js"></script>
 <script src="~/lib/autosize.min.js"></script>
 <script src="~/lib/knockout-3.5.1.js"></script>
-<script src="~/js/reviewapp.js?v=5"></script>
+<script src="~/js/reviewapp.js" asp-append-version="true"></script>
 <script type="text/javascript">
         $(".hidden-by-default").removeClass("hidden-by-default");
 </script>
