--- a/source/Taurit.TodoistTools.Review/Views/Shared/_Layout.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Todoist Review</title>
-    <link href="~/css/reviewapp.min.css?v=10" rel="stylesheet" type="text/css" />
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/reviewapp.min.css" rel="stylesheet" type="text/css" asp-append-version="true" />
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" asp-append-version="true" />
     <link rel="manifest" href="/manifest.json">
     
     <link rel="icon" href="/images/icon.ico" type="image/x-icon" />
