--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -12,6 +12,11 @@ body {
         text-align: center;
     }
 
+    .task-description {
+        font-style: italic;
+        font-size: 16px;
+    }
+
     .question {
         color: #AAAAAA;
         display: none;
