--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -28,18 +28,13 @@ body {
         .label {
             display: inline-block;
             width: 100%;
-            padding: 20px;
+            padding: 30px;
             border: 1px solid #AAAAAA;
             text-align: center;
             color: #000000;
             cursor: pointer;
             margin-top: 10px;
-
-            .glyphicon {
-                padding-bottom: 10px;
-                display: inline-block;
-                font-size: large;
-            }
+            font-size: 100%;
 
             &.label-selected {
                 background-color: @selectedLabelBackground;
