Separate api model from knockout's viewmodel. Split code into more files for convenience

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
 <script src="~/lib/jquery-3.6.0.min.js"></script>
 <script src="~/lib/autosize.min.js"></script>
 <script src="~/lib/knockout-3.5.1.js"></script>
-<script src="~/js/reviewapp.js" asp-append-version="true"></script>
+<script src="~/js/bundle.js" asp-append-version="true"></script>
 <script type="text/javascript">
     $(".hidden-by-default").removeClass("hidden-by-default");
 </script>
