Fix labels selection issue in the front end

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -50,10 +50,10 @@
         </div>
     </div>
 
-    <div class="all-labels row" data-bind="foreach: labels, visible: showLabels() === true">
+    <div class="all-labels row" data-bind="foreach: labels(), visible: showLabels() === true">
         <div class="col-xs-4">
-            <div class="label" data-bind='attr: {"data-id": name}'>
-                <span data-bind="text: name"></span>
+            <div class="label" data-bind='attr: {"data-id": name}, css: { "label-selected": isSelected() }'>
+                <span data-bind='text: name'></span>
             </div>
         </div>
     </div>
