--- a/source/Taurit.TodoistTools.Review/Views/Shared/_Layout.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Shared/_Layout.cshtml
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Todoist Review</title>
-    <link href="~/css/reviewapp.min.css" rel="stylesheet" type="text/css" asp-append-version="true"/>
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" asp-append-version="true"/>
+    <link href="~/css/reviewapp.min.css" rel="stylesheet" type="text/css" asp-append-version="true" />
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" asp-append-version="true" />
     <link rel="manifest" href="/manifest.json">
 
-    <link rel="icon" href="/images/icon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/images/icon.ico" type="image/x-icon" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Review">
@@ -29,8 +29,8 @@
     </style>
 </head>
 <body>
-<div class="container">
-    @RenderBody()
-</div>
+    <div class="container">
+        @RenderBody()
+    </div>
 </body>
 </html>
