--- a/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
+++ b/source/Taurit.TodoistTools.Review/wwwroot/css/reviewapp.less
@@ -18,7 +18,6 @@ body {
     }
 
     .question {
-        color: #AAAAAA;
         display: none;
     }
 
@@ -31,14 +30,12 @@ body {
             padding: 30px;
             border: 1px solid #AAAAAA;
             text-align: center;
-            color: #000000;
             cursor: pointer;
             margin-top: 10px;
             font-size: 100%;
 
             &.label-selected {
                 background-color: @selectedLabelBackground;
-                color: #fff;
                 border: 1px solid darken(@selectedLabelBackground, 5);
 
                 &:hover {
@@ -67,12 +64,11 @@ body {
     padding: 20px;
     font-size: larger;
     text-align: center;
-    color: #000;
     cursor: pointer;
     margin-top: 10px;
 
 
-    @p1Color: #333333;
+    @p1Color: #ffffff;
     @p2Color: #4073D6;
     @p3Color: #f88900;
     @p4Color: #dc1010;
@@ -81,11 +77,14 @@ body {
     @borderSize: 2px;
     border: @borderSize solid transparent;
 
+    &.selected {
+        border: @borderSize solid transparent;
+    }
+
     &.priority-1 {
         // lowest, "natural" priority
         color: @p1Color;
-        border-color: #333333;
-        background-color: transparent;
+        border-color: #ffffff;
 
         &.selected {
             box-shadow: 0px 0px 13px @p1Color;
@@ -95,7 +94,7 @@ body {
     &.priority-2 {
         color: @p2Color;
         border-color: @p2Color;
-        background-color: #ECF1FB;
+        background: #273339;
 
         &.selected {
             box-shadow: 0px 0px 13px @p2Color;
@@ -105,7 +104,7 @@ body {
     &.priority-3 {
         color: @p3Color;
         border-color: @p3Color;
-        background-color: #fff0de;
+        background: #393327;
 
         &.selected {
             box-shadow: 0px 0px 13px @p3Color;
@@ -115,7 +114,7 @@ body {
     &.priority-4 {
         color: @p4Color;
         border-color: @p4Color;
-        background-color: #ffe7e7;
+        background: #392727;
 
         &.selected {
             box-shadow: 0px 0px 13px @p4Color;
@@ -123,91 +122,90 @@ body {
     }
 }
 
-.time {
-    text-align: center;
-    color: #000000;
-    cursor: pointer;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently
+    .time {
+        text-align: center;
+        cursor: pointer;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none; /* Safari */
+        -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+        user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
-}
-
-.time-inline {
-    padding: 10px;
-    border: 2px solid #AAAAAA;
-    display: inline-block;
-    margin-top: 4px;
-}
-
-.time-inline-reset {
-    color: darkred;
-}
-
-.time-inline-result {
-    background-color: transparent;
-
-    &.highlighted {
-        background-color: #d0ffbb;
-    }
-}
-
-
-.hidden-by-default {
-    display: none;
-}
-
-.jumbotron-login, .jumbotron-loading {
-    margin-top: 20px;
-}
-
-.reload-page {
-    margin-top: 30px;
-    text-align: center;
-}
-
-.content-box {
-    width: 100%;
-}
-
-.definition {
-    @p1Color: #333333;
-    @p2Color: #4073D6;
-    @p3Color: #f88900;
-    @p4Color: #dc1010;
-
-    padding: 8px 7px;
-    border: 1px solid transparent;
-    font-size: 18px;
-    font-family: monospace;
-    font-weight: bold;
-
-    &.p1 {
-        border-color: @p1Color;
-        background-color: fade(@p1Color, 10%);
-        color: @p1Color;
     }
 
-    &.p2 {
-        border-color: @p2Color;
-        background-color: fade(@p2Color, 10%);
-        color: @p2Color;
+    .time-inline {
+        padding: 10px;
+        border: 2px solid #AAAAAA;
+        display: inline-block;
+        margin-top: 4px;
     }
 
-    &.p3 {
-        border-color: @p3Color;
-        background-color: fade(@p3Color, 10%);
-        color: @p3Color;
+    .time-inline-reset {
+        color: darkred;
     }
 
-    &.p4 {
-        border-color: @p4Color;
-        background-color: fade(@p4Color, 10%);
-        color: @p4Color;
-        margin-top: 10px;
+    .time-inline-result {
+        background-color: transparent;
+
+        &.highlighted {
+            background-color: green;
+        }
     }
-}
+
+
+    .hidden-by-default {
+        display: none;
+    }
+
+    .jumbotron-login, .jumbotron-loading {
+        margin-top: 20px;
+    }
+
+    .reload-page {
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .content-box {
+        width: 100%;
+    }
+
+    .definition {
+        @p1Color: #333333;
+        @p2Color: #4073D6;
+        @p3Color: #f88900;
+        @p4Color: #dc1010;
+
+        padding: 8px 7px;
+        border: 1px solid transparent;
+        font-size: 18px;
+        font-family: monospace;
+        font-weight: bold;
+
+        &.p1 {
+            border-color: @p1Color;
+            background-color: fade(@p1Color, 10%);
+            color: @p1Color;
+        }
+
+        &.p2 {
+            border-color: @p2Color;
+            background-color: fade(@p2Color, 10%);
+            color: @p2Color;
+        }
+
+        &.p3 {
+            border-color: @p3Color;
+            background-color: fade(@p3Color, 10%);
+            color: @p3Color;
+        }
+
+        &.p4 {
+            border-color: @p4Color;
+            background-color: fade(@p4Color, 10%);
+            color: @p4Color;
+            margin-top: 10px;
+        }
+    }
