Remove the assumption of "maximum 1 label"

--- a/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
+++ b/source/Taurit.TodoistTools.Review/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
             </div>
     </div>
 
-    <div class="all-labels row" data-bind="foreach: labels(), visible: showLabels() === true">
+    <div class="all-labels row" data-bind="foreach: labels()">
         <div class="col-4">
             <div class="label" data-bind='attr: {"data-id": name}, css: { "label-selected": isSelected() }'>
                 <span data-bind='text: name'></span>
